--- a/test/fixtures/students.yml
+++ b/test/fixtures/students.yml
@@ -1,11 +1,13 @@
 # Read about fixtures at https://api.rubyonrails.org/classes/ActiveRecord/FixtureSet.html
 
-# This model initially had no columns defined. If you add columns to the
-# model remove the "{}" from the fixture names and add the columns immediately
-# below each fixture, per the syntax in the comments below
-#
-one: {}
-# column: value
-#
-two: {}
-# column: value
+one:
+  email: student1@example.com
+  encrypted_password: <%= Devise::Encryptor.digest(Student, 'password123') %>
+  current_streak: 5
+  best_streak: 10
+
+two:
+  email: student2@example.com
+  encrypted_password: <%= Devise::Encryptor.digest(Student, 'password123') %>
+  current_streak: 3
+  best_streak: 7
