--- a/config/production.env.example
+++ b/config/production.env.example
@@ -26,7 +26,17 @@ BATCH_PROCESSING_SIZE=5
 TIMEOUT_PROTECTION_ENABLED=true
 
 # Server Configuration
-WEB_CONCURRENCY=1
+WEB_CONCURRENCY=2
 RAILS_MAX_THREADS=5
 RAILS_MIN_THREADS=5
-PORT=3000 
+PORT=3000
+
+# Redis Configuration - NOVO
+REDIS_POOL_SIZE=10
+REDIS_TIMEOUT=5
+
+# Cache Settings - NOVO
+CACHE_EXPIRES_IN=3600
+
+# Rate Limiting - NOVO
+RATE_LIMIT_PER_IP=200 
