feat: implementar URLs amigáveis com slugs para atividades
- Adicionar campo slug ao modelo Activity
- Implementar geração automática de slugs baseados no título
- Manter compatibilidade com URLs antigas (ID)
- Atualizar todos os controllers para usar find_by_param
- Corrigir testes para usar slugs
- URLs agora são amigáveis: /activities/nome-da-atividade/solve

--- a/test/fixtures/activities.yml
+++ b/test/fixtures/activities.yml
@@ -6,6 +6,7 @@ one:
   texto: "Learn basic French vocabulary"
   video_url: "https://www.youtube.com/watch?v=example1"
   imagem_url: "https://example.com/image1.jpg"
+  slug: "french-basics"
   user: one
 
 two:
@@ -14,4 +15,5 @@ two:
   texto: "Master French grammar rules"
   video_url: "https://www.youtube.com/watch?v=example2"
   imagem_url: "https://example.com/image2.jpg"
+  slug: "advanced-french-grammar"
   user: two
